--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
     environment {
         DEV_PROJECT = "samuellb-books-dev"
         STAGE_PROJECT = "samuellb-books-stage"
-        APP_GIT_URL = "https://github.com/samuellb/DO288-apps"
+        APP_GIT_URL = "https://github.com/linbiaowen/DO288-apps"
         NEXUS_SERVER = "http://nexus-common.apps.ocp-na2.prod.nextcle.com/repository/nodejs"
 
         // DO NOT CHANGE THE GLOBAL VARS BELOW THIS LINE
